# HomeWork_24

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
lms_project/: .coverage  .env.sample  .gitignore  Brewfile  Brewfile.lock.json  Dockerfile  README.md  docker-compose.yml  manage.py  requirements.txt
lms_project/courses_app/: filters.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
lms_project/courses_app/fixtures/: payments_fixture.json
lms_project/courses_app/migrations/: 0001_initial.py  0002_payment.py  0003_coursesubscription.py
lms_project/lessons_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
lms_project/lessons_app/migrations/: 0001_initial.py  0002_lesson_course.py
lms_project/lms_project/: .gitignore  asgi.py  celery.py  settings.py  urls.py  wsgi.py
lms_project/users_app/: admin.py  apps.py  models.py  tasks.py
lms_project/users_app/migrations/: 0001_initial.py
