[tool.poetry]
name = "homework-24"
version = "0.1.0"
description = ""
authors = ["Sergey Malyarov <sergey@malyaroff.com>"]
readme = "README.md"
packages = [{include = "homework_24"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

